--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -1,106 +1,6 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Task 1. K-means clustering from scratch \n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.datasets import make_blobs\n",
-    "from matplotlib import pyplot as plt\n",
-    "from copy import deepcopy \n",
-    "\n",
-    "from elice_utils import EliceUtils\n",
-    "eu = EliceUtils()\n",
-    "\n",
-    "# Check versions\n",
-    "print('numpy version: ', np.__version__)\n",
-    "print('pandas version: ', pd.__version__)\n",
-    "\n",
-    "np.random.seed(12345)\n",
-    "\n",
-    "# Q1. Create a dataset (X and y) with 3 clusters usng sklearn.datasets.make_blobs\n",
-    "X, y = make_blobs(n_samples= 800, n_features= 2, centers=3, random_state = 12345)\n",
-    "\n",
-    "# Q2: define a function to calculate Euclidean distance\n",
-    "def dist(a, b, axis):\n",
-    "    return np.linalg.norm(a-b, axis=1)\n",
-    "\n",
-    "\n",
-    "# Q3. Number of clusters\n",
-    "K = 3\n",
-    "\n",
-    "# X coordinates of initial centroids\n",
-    "C_x = [-7, 0, 7]\n",
-    "# Y coordinates of initial centroids\n",
-    "C_y = [0, 0, 0]\n",
-    "\n",
-    "C = np.array(list(zip(C_x, C_y)), dtype=np.float32)\n",
-    "\n",
-    "print(\"initial centroids: \", C)\n",
-    "\n",
-    "# Plotting along with the initial Centroids\n",
-    "plt.scatter(X[:,0], X[:,1] , c='#050505', s=7)\n",
-    "plt.scatter(C_x, C_y, marker='*', s=150, c='g')\n",
-    "\n",
-    "# To store the value of centroids when it updates\n",
-    "C_old = np.zeros(C.shape)\n",
-    "\n",
-    "# Cluster Lables(0, 1, 2)\n",
-    "clusters = np.zeros(len(X))\n",
-    "\n",
-    "# Error func. - Distance between new centroids and old centroids\n",
-    "error = dist(C, C_old, None)\n",
-    "print('initial error: ', error)\n",
-    "\n",
-    "# Loop will run till the error is less than the threshold value\n",
-    "while error.all() > 1e-4:\n",
-    "    # Q4. Assigning each value to its closest cluster\n",
-    "    for i in range(len(X)):\n",
-    "        distances = dist(X[i], C, None)\n",
-    "        cluster = np.argmin(distances)\n",
-    "        clusters[i] = cluster\n",
-    "    # Storing the old centroid values\n",
-    "    C_old = deepcopy(C)\n",
-    "    # Q5. Finding the new centroids by taking the average value\n",
-    "    for i in range(K):\n",
-    "        points = [X[j] for j in range(len(X)) if clusters[j] == i]\n",
-    "        C[i] = np.mean(points, axis=0)\n",
-    "    error = dist(C, C_old, None) \n",
-    "\n",
-    "print('final error: ', error)\n",
-    "print('final Centroid: ', C) \n",
-    "\n",
-    "# Plotting along with the final Centroids\n",
-    "plt.scatter(C[:,0], C[:,1], marker='*', s=250, c='r')\n",
-    "plt.savefig(\"final_cluster.png\") \n",
-    "eu.send_image(\"final_cluster.png\")\n"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
-  }
- },
+ "cells": [],
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 2
 }
